added mouseenter event for pixels to light them up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input type="number" name="row" id="row-num">
                     <input type="number" name="col" id="col-num">
                     <button id="add" type="button" onclick="addGrid()">Add Grid</button>
-                    <button id="light" type="button" onclick="lightEmUp()">Light Em</button>
+                    <button id="light" type="button" onclick="reset()">Erase Grid</button>
                 </fieldset>
             </section>
             <section id="display">
